--- a/index.html
+++ b/index.html
@@ -289,30 +289,31 @@
             <p>
                 <strong>Email:</strong> alexander.zahrer(at)proton.me
             </p>
-            <h2>About Me</h2>
-            <p>I am a mathematician from Austria. My academic interests revolve around:</p>
-            <ul>
-                <li><a href="https://ncatlab.org/nlab/show/higher+category+theory">Higher Category Theory</a></li>
-                <li><a href="https://ncatlab.org/nlab/show/higher+algebra">Higher Algebra</a></li>
-                <li><a href="https://ncatlab.org/nlab/show/derived+algebraic+geometry">Derived Algebraic Geometry</a></li>
-                <li><a href="https://ncatlab.org/nlab/show/stable+homotopy+theory">Stable Homotopy Theory</a></li>
-                <li><a href="https://ncatlab.org/nlab/show/functorial+quantum+field+theory">Functorial Field Theories</a></li>
-            </ul>
+            <section class="about">
+  <h2>About Me</h2>
+  <p> My interests revolve around:</p>
+  <ul>
+    <li><a href="https://ncatlab.org/nlab/show/higher+category+theory">Higher Category Theory</a></li>
+    <li><a href="https://ncatlab.org/nlab/show/higher+algebra">Higher Algebra</a></li>
+    <li><a href="https://ncatlab.org/nlab/show/derived+algebraic+geometry">Derived Algebraic Geometry</a></li>
+    <li><a href="https://ncatlab.org/nlab/show/stable+homotopy+theory">Stable Homotopy Theory</a></li>
+    <li><a href="https://ncatlab.org/nlab/show/functorial+quantum+field+theory">Functorial Field Theories</a></li>
+  </ul>
+</section>
+
             <h2>Seminars</h2>
-            <p>Two friends of mine (Lucy Grossmann and Marcus Nicolas) and I enjoy organizing seminars on subjects we find particularly interesting. The following seminars have taken place or are currently ongoing:</p>
+            <p>Two friends of mine (Lucy Grossmann and Marcus Nicolas) and I are organizing seminars on subjects we find particularly interesting. The following seminars have taken place or are currently ongoing:</p>
             <ul>
                 <li>
                     <strong>Synthetic Seminar:</strong> (October 2024 - March 2025) A reading seminar focused on the upcoming book
                     <a href="https://drive.google.com/file/d/1lKaq7watGGl3xvjqw9qHjm6SDPFJ2-0o/view?usp=sharing" target="_blank" rel="noopener noreferrer">Formalization of Higher Categories</a>
-                    by Denis-Charles Cisinski and Jakob Maximilian Cnossen.
                 </li>
                 <li>
                     <strong>Derived Seminar:</strong> (April 2025 - ongoing) A seminar following the book
                     <a href="https://people.mpim-bonn.mpg.de/gaitsgde/Book/" target="_blank" rel="noopener noreferrer">A Study in Derived Algebraic Geometry</a>
-                    by Dennis Gaitsgory and Nick Rozenblyum.
                 </li>
             </ul>
-            <p>If you share these interests or have questions about the seminars, please don't hesitate to drop me an email.</p>
+            <p>If you are interested in joining, do not hesitate to contact me via mail.</p>
         </section>
         <section id="writings">
             <h2>Writings</h2>
@@ -337,11 +338,6 @@
                     <p>
                         Mathematical theories often, if not always, are motivated by looking closely at the real world. The first such example of a mathematical theory that should come to mind is, of course, calculus. Just as calculus was derived for the sole purpose of making sense of motion, acceleration, or more generally change, that is, calculus was invented in order to supply classical mechanics with the necessary mathematical tools, functional analysis was born from the depths of hell (or so some people might think) so as to furnish the quantum theorists with the long sought tools and give rigorous descriptions for quantum mechanics in general. One such description is the algebraic formulation of quantum mechanics, that is, the C*-algebraic approach. In this thesis we will derive the basics of the theory of C*-operator algebras. We will, however, not get into the physical theory that is quantum mechanics, as this work is intended to be purely mathematical. If one is interested in applying the theory to describe quantum mechanics see [11]. We will begin our journey by forging a suitable topology, called the weak*-topology, so as to lay the groundwork for Banach algebras. The theory of Banach algebras will be discussed in general at first, but then we will focus on the abelian case and introduce the celebrated Gel'fand transform. After having done so, we will devote ourselves to the study of C*-algebras and we will prove the first Gel'fand Naimark theorem, which roughly states that abelian C*-algebras are nothing more than continuous functions (that is up to *-isomorphism). Our journey then leads us to the derivation of the CFC (=Continuous Functional Calculus) in the setting of C*-algebras, an immensely important tool in functional analysis, especially when applied to spectral theory. By means of the CFC we are then able to give meaning to the notion of positivity of elements in a C*-algebra. After having done so, we will concern ourselves with certain linear functionals called states, so as to be able to derive one of the most iconic statements of the field; the GNS-construction (Gel'fand-Naimark-Segal). The GNS construction will enable us to prove the second Gel'fand-Naimark representation theorem, which roughly states that every C*-algebra is, up to *-isomorphism, just a subset of bounded linear operators on some Hilbert space, which will conclude our journey.
                     </p>
-                    <div class="thesis-download">
-                        <a href="BSc_Arbeit_Zahrer.pdf" class="file-link" download>
-                            <i class="fas fa-file-pdf"></i> Download Bachelor Thesis
-                        </a>
-                    </div>
                 </div>
             </div>
         </section>
@@ -350,62 +346,37 @@
             <div id="informal-notes-content">
                 <p>Below are some of my informal notes on various mathematical topics:</p>
                 <div class="download-section">
-                    <h3>Geometry and Physics</h3>
                     <div class="notes-category">
                         <a href="GR2.pdf" class="file-link" download>
-                            <i class="fas fa-file-pdf"></i> General Relativity Notes (GR2.pdf)
-                        </a>
-                        <a href="Ricci_Flow.pdf" class="file-link" download>
-                            <i class="fas fa-file-pdf"></i> Ricci Flow (Ricci_Flow.pdf)
+                            <i class="fas fa-file-pdf"></i> Notes on General Relativity
                         </a>
                         <a href="QFT_3.pdf" class="file-link" download>
-                            <i class="fas fa-file-pdf"></i> Quantum Field Theory (QFT_3.pdf)
+                            <i class="fas fa-file-pdf"></i> Informal notes on the Cobordism Hypothesis
                         </a>
                     </div>
                 </div>
-                <div class="download-section">
-                    <h3>Homotopy Coherent Stuff</h3>
+                
                     <div class="notes-category">
                         <a href="NotesHA_1.pdf" class="file-link" download>
-                            <i class="fas fa-file-pdf"></i> Notes on Higher Algebra (NotesHA_1.pdf)
+                            <i class="fas fa-file-pdf"></i> On Homotopy Coherence
                         </a>
-                    </div>
                 </div>
                 <div class="download-section">
                     <h3>Analysis</h3>
                     <div class="notes-category">
                         <a href="PDEs_Exercise43.pdf" class="file-link" download>
-                            <i class="fas fa-file-pdf"></i> PDE Exercise 43 (PDEs_Exercise43.pdf)
+                            <i class="fas fa-file-pdf"></i> Some funny PDE exercise
                         </a>
                         <a href="VDSP_finalPaper_Zahrer.pdf" class="file-link" download>
-                            <i class="fas fa-file-pdf"></i> Variable Dimension Stochastic Processes (VDSP_finalPaper_Zahrer.pdf)
-                        </a>
-                        <a href="Locally_Convex_Spaces.pdf" class="file-link" download>
-                            <i class="fas fa-file-pdf"></i> Locally Convex Spaces (Locally_Convex_Spaces.pdf)
+                            <i class="fas fa-file-pdf"></i> Short note on Sobolev Spaces
                         </a>
                         <a href="Zahrer_AusarbeitungCxAnalysis_finalvs.pdf" class="file-link" download>
-                            <i class="fas fa-file-pdf"></i> Complex Analysis (Zahrer_AusarbeitungCxAnalysis_finalvs.pdf)
-                        </a>
-                    </div>
-                </div>
-                <div class="download-section">
-                    <h3>Logic</h3>
-                    <div class="notes-category">
-                        <a href="Logic_Task1_Zahrer.pdf" class="file-link" download>
-                            <i class="fas fa-file-pdf"></i> Logic: Task 1 (Logic_Task1_Zahrer.pdf)
-                        </a>
-                        <a href="Logic_Task2_Zahrer.pdf" class="file-link" download>
-                            <i class="fas fa-file-pdf"></i> Logic: Task 2 (Logic_Task2_Zahrer.pdf)
-                        </a>
-                        <a href="Logic_Task3_Zahrer.pdf" class="file-link" download>
-                            <i class="fas fa-file-pdf"></i> Logic: Task 3 (Logic_Task3_Zahrer.pdf)
+                            <i class="fas fa-file-pdf"></i> Notes on Sheaf-theoretical methods in Complex Analysis
                         </a>
                     </div>
                 </div>
             </div>
         </section>
-        <footer>
-            <p>© 2025 Alexander Zahrer</p>
         </footer>
     </div>
 </body>
