--- a/index.html
+++ b/index.html
@@ -331,20 +331,11 @@
                     </div>
                 </div>
             </div>
-            <div class="thesis-entry">
-                <p class="thesis-title"><em>Bachelor Thesis:</em> Aspects of the theory of $C^{*}$-operator algebras</p>
-                <button class="abstract-toggle" onclick="toggleAbstract('bachelor-abstract')">Show More</button>
-                <div id="bachelor-abstract" class="abstract-content">
-                    <p>
-                        Mathematical theories often, if not always, are motivated by looking closely at the real world. The first such example of a mathematical theory that should come to mind is, of course, calculus. Just as calculus was derived for the sole purpose of making sense of motion, acceleration, or more generally change, that is, calculus was invented in order to supply classical mechanics with the necessary mathematical tools, functional analysis was born from the depths of hell (or so some people might think) so as to furnish the quantum theorists with the long sought tools and give rigorous descriptions for quantum mechanics in general. One such description is the algebraic formulation of quantum mechanics, that is, the C*-algebraic approach. In this thesis we will derive the basics of the theory of C*-operator algebras. We will, however, not get into the physical theory that is quantum mechanics, as this work is intended to be purely mathematical. If one is interested in applying the theory to describe quantum mechanics see [11]. We will begin our journey by forging a suitable topology, called the weak*-topology, so as to lay the groundwork for Banach algebras. The theory of Banach algebras will be discussed in general at first, but then we will focus on the abelian case and introduce the celebrated Gel'fand transform. After having done so, we will devote ourselves to the study of C*-algebras and we will prove the first Gel'fand Naimark theorem, which roughly states that abelian C*-algebras are nothing more than continuous functions (that is up to *-isomorphism). Our journey then leads us to the derivation of the CFC (=Continuous Functional Calculus) in the setting of C*-algebras, an immensely important tool in functional analysis, especially when applied to spectral theory. By means of the CFC we are then able to give meaning to the notion of positivity of elements in a C*-algebra. After having done so, we will concern ourselves with certain linear functionals called states, so as to be able to derive one of the most iconic statements of the field; the GNS-construction (Gel'fand-Naimark-Segal). The GNS construction will enable us to prove the second Gel'fand-Naimark representation theorem, which roughly states that every C*-algebra is, up to *-isomorphism, just a subset of bounded linear operators on some Hilbert space, which will conclude our journey.
-                    </p>
-                </div>
-            </div>
         </section>
         <section id="informal-notes">
             <h2>Informal Notes <button id="toggle-notes-button" class="toggle-notes" onclick="toggleInformalNotes()">See More</button></h2>
             <div id="informal-notes-content">
-                <p>Below are some of my informal notes on various mathematical topics:</p>
+                <p>Below are some of my informal notes on various mathematical topics (most of these were written years ago):</p>
                 <div class="download-section">
                     <div class="notes-category">
                         <a href="GR2.pdf" class="file-link" download>
@@ -354,16 +345,9 @@
                             <i class="fas fa-file-pdf"></i> Informal notes on the Cobordism Hypothesis
                         </a>
                     </div>
-                </div>
-                
-                    <div class="notes-category">
                         <a href="NotesHA_1.pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> On Homotopy Coherence
                         </a>
-                </div>
-                <div class="download-section">
-                    <h3>Analysis</h3>
-                    <div class="notes-category">
                         <a href="PDEs_Exercise43.pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> Some funny PDE exercise
                         </a>
