--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
         <section id="writings">
             <h2>Writings</h2>
             <div class="thesis-entry">
-                <p class="thesis-title"><em>Master Thesis:</em> Smooth Functorial Field Theory and the Geometric Cobordism Hypothesis</p>
+                <p class="thesis-title">Master Thesis: <em>Smooth Functorial Field Theory and the Geometric Cobordism Hypothesis</em></p>
                 <button class="abstract-toggle" onclick="toggleAbstract('master-abstract')">Show More</button>
                 <div id="master-abstract" class="abstract-content">
                     <p>
