--- a/index.html
+++ b/index.html
@@ -331,7 +331,9 @@
                             <li><a href="https://ncatlab.org/nlab/show/functorial+quantum+field+theory">Functorial Field Theories</a></li>
                         </ul>
                     </div>
-                    <img src="alex.png" alt="Alexander Zahrer" class="profile-picture">
+                    <div class="profile-picture-container">
+        <img src="alex.png" alt="Alexander Zahrer" class="profile-picture">
+    </div>
                 </div>
             </section>
 
