--- a/index.html
+++ b/index.html
@@ -365,22 +365,22 @@
         <section id="informal-notes">
             <h2>Informal Notes <button id="toggle-notes-button" class="toggle-notes" onclick="toggleInformalNotes()">See More</button></h2>
             <div id="informal-notes-content">
-                <p>Below are some of my informal notes on various mathematical topics (most of these were written years ago):</p>
+                <p>Some random notes (probably with many errors) on different kinds of things :) </p>
                 <div class="download-section">
                     <div class="notes-category">
                         <a href="GR2.pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> Notes on General Relativity
                         </a>
-                        <a href="QFT_3.pdf" class="file-link" download>
+                        <a href="QFT (3).pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> Informal notes on the Cobordism Hypothesis
                         </a>
                         <a href="NotesHA_1.pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> On Homotopy Coherence
                         </a>
-                        <a href="PDEs_Exercise43.pdf" class="file-link" download>
-                            <i class="fas fa-file-pdf"></i> Some funny PDE exercise
+                        <a href="VectorialElliptic.pdf" class="file-link" download>
+                            <i class="fas fa-file-pdf"></i> Vectorial Meyers-Serrin
                         </a>
-                        <a href="VDSP_finalPaper_Zahrer.pdf" class="file-link" download>
+                        <a href="VDSP_finalPaper_Zahrer (1).pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> Short note on Sobolev Spaces
                         </a>
                         <a href="Zahrer_AusarbeitungCxAnalysis_finalvs.pdf" class="file-link" download>
