--- a/index.html
+++ b/index.html
@@ -378,13 +378,13 @@
                             <i class="fas fa-file-pdf"></i> On Homotopy Coherence
                         </a>
                         <a href="VectorialElliptic.pdf" class="file-link" download>
-                            <i class="fas fa-file-pdf"></i> Vectorial Meyers-Serrin
+                            <i class="fas fa-file-pdf"></i> Vectorial Elliptic Operators
                         </a>
                         <a href="VDSP_finalPaper_Zahrer (1).pdf" class="file-link" download>
-                            <i class="fas fa-file-pdf"></i> Short note on Sobolev Spaces
+                            <i class="fas fa-file-pdf"></i> Note on Sobolev Spaces and Embeddings
                         </a>
                         <a href="Zahrer_AusarbeitungCxAnalysis_finalvs.pdf" class="file-link" download>
-                            <i class="fas fa-file-pdf"></i> Notes on Sheaf-theoretical methods in Complex Analysis
+                            <i class="fas fa-file-pdf"></i> Sheaf-theoretical methods in Complex Analysis
                         </a>
                     </div>
                 </div>
