--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                         <a href="GR2.pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> Notes on General Relativity
                         </a>
-                        <a href="QFT (3).pdf" class="file-link" download>
+                        <a href="yogaCobordisms.pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> Informal notes on the Cobordism Hypothesis
                         </a>
                         <a href="NotesHA_1.pdf" class="file-link" download>
