--- a/index.html
+++ b/index.html
@@ -332,8 +332,23 @@
                         </ul>
                     </div>
                     <div class="profile-picture-container">
-        <img src="alex.png" alt="Alexander Zahrer" class="profile-picture">
-    </div>
+    <img src="alex.png" alt="Alexander Zahrer" class="profile-picture">
+</div>
+
+<style>
+    .profile-picture-container {
+        width: 150px;
+        height: 150px;
+        overflow: hidden;
+        border-radius: 50%;  /* Creates the circular shape */
+    }
+
+    .profile-picture {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;  /* Ensures the image fills the container nicely */
+    }
+</style>
                 </div>
             </section>
 
@@ -384,7 +399,7 @@
                             <i class="fas fa-file-pdf"></i> Note on Sobolev Spaces and Embeddings
                         </a>
                         <a href="Zahrer_AusarbeitungCxAnalysis_finalvs.pdf" class="file-link" download>
-                            <i class="fas fa-file-pdf"></i> Sheaf-theoretical methods in Complex Analysis
+                            <i class="fas fa-file-pdf"></i> Sheafy Methods in Complex Analysis
                         </a>
                     </div>
                 </div>
