--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                         </ul>
                     </div>
                     <div class="profile-picture-container">
-    <img src="alex.png" alt="Alexander Zahrer" class="profile-picture">
+    <img src="alex (1).png" alt="Alexander Zahrer" class="profile-picture">
 </div>
 
 <style>
