--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                         </ul>
                     </div>
                     <div class="profile-picture-container">
-    <img src="alex (1).png" alt="Alexander Zahrer" class="profile-picture">
+    <img src="alex.png" alt="Alexander Zahrer" class="profile-picture">
 </div>
 
 <style>
@@ -340,13 +340,14 @@
         width: 150px;
         height: 150px;
         overflow: hidden;
-        border-radius: 50%;  /* Creates the circular shape */
+        border-radius: 50%;
     }
 
     .profile-picture {
         width: 100%;
         height: 100%;
-        object-fit: cover;  /* Ensures the image fills the container nicely */
+        object-fit: cover;
+        object-position: center 20%; /* This moves the image up so more of the top of your head is visible */
     }
 </style>
                 </div>
