--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                         <a href="yogaCobordisms.pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> Informal notes on the Cobordism Hypothesis
                         </a>
-                        <a href="NotesHA_1.pdf" class="file-link" download>
+                        <a href="NotesHA (2).pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> On Homotopy Coherence
                         </a>
                         <a href="VectorialElliptic.pdf" class="file-link" download>
