--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                 <h2>About Me</h2>
                 <div class="about-container">
                     <div class="about-content">
-                        <p>My interests revolve around:</p>
+                        <p> I am generally interested in the following fields of study:</p>
                         <ul>
                             <li><a href="https://ncatlab.org/nlab/show/higher+category+theory">Higher Category Theory</a></li>
                             <li><a href="https://ncatlab.org/nlab/show/higher+algebra">Higher Algebra</a></li>
@@ -337,8 +337,8 @@
 
 <style>
     .profile-picture-container {
-        width: 150px;
-        height: 150px;
+        width: 180px;
+        height: 180px;
         overflow: hidden;
         border-radius: 60%;
     }
@@ -347,7 +347,7 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
-        object-position: center 25%; /* This moves the image up so more of the top of your head is visible */
+        object-position: center 30%; /* This moves the image up so more of the top of your head is visible */
     }
 </style>
                 </div>
