--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                 <h2>About Me</h2>
                 <div class="about-container">
                     <div class="about-content">
-                        <p> I am generally interested in the following fields of study:</p>
+                        <p> My research interests revolve around the following subjects:</p>
                         <ul>
                             <li><a href="https://ncatlab.org/nlab/show/higher+category+theory">Higher Category Theory</a></li>
                             <li><a href="https://ncatlab.org/nlab/show/higher+algebra">Higher Algebra</a></li>
@@ -337,20 +337,19 @@
 
 <style>
     .profile-picture-container {
-        width: 180px;
-        height: 180px;
+        width: 150px;
+        height: 150px;
         overflow: hidden;
-        border-radius: 60%;
+        border-radius: 50%;
     }
 
     .profile-picture {
         width: 100%;
         height: 100%;
         object-fit: cover;
-        object-position: center 30%; /* This moves the image up so more of the top of your head is visible */
+        object-position: 50% 30%; /* Horizontal% Vertical% */
     }
 </style>
-                </div>
             </section>
 
             <h2>Seminars</h2>
