--- a/index.html
+++ b/index.html
@@ -345,9 +345,11 @@
 
     .profile-picture {
         width: 100%;
-        height: 100%;
+        height: auto; /* Changed from 100% to auto */
         object-fit: cover;
-        object-position: 1200% 4%; /* Horizontal% Vertical% */
+        object-position: 50% 40%; /* Adjusted to better center on your face */
+        transform: scale(1.2); /* Makes the image slightly larger */
+        transform-origin: center 40%; /* Sets the origin point for scaling */
     }
 </style>
             </section>
