--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                 <h2>About Me</h2>
                 <div class="about-container">
                     <div class="about-content">
-                        <p> My research interests revolve around the following subjects:</p>
+                        <p> My mathematical interests revolve around the following subjects:</p>
                         <ul>
                             <li><a href="https://ncatlab.org/nlab/show/higher+category+theory">Higher Category Theory</a></li>
                             <li><a href="https://ncatlab.org/nlab/show/higher+algebra">Higher Algebra</a></li>
