--- a/index.html
+++ b/index.html
@@ -454,11 +454,15 @@
                     <a href="https://drive.google.com/file/d/1lKaq7watGGl3xvjqw9qHjm6SDPFJ2-0o/view?usp=sharing" target="_blank" rel="noopener noreferrer">Formalization of Higher Categories</a>
                 </li>
                 <li>
-                    <strong>Derived Seminar:</strong> (April 2025 - ongoing) A seminar following the book
-                    <a href="https://people.mpim-bonn.mpg.de/gaitsgde/Book/" target="_blank" rel="noopener noreferrer">A Study in Derived Algebraic Geometry</a>
-                </li>
-            </ul>
-            <p>If you are interested in joining, do not hesitate to contact me via mail.</p>
+    <strong>Derived Seminar:</strong> (April 2025 - ongoing) A seminar following the book
+    <a href="https://people.mpim-bonn.mpg.de/gaitsgde/Book/" target="_blank" rel="noopener noreferrer">A Study in Derived Algebraic Geometry</a>
+    <details>
+        <summary>See more</summary>
+        <p><a href="DAG TALK.pdf" download>28.04.25 - Straightening/Kan extensions/Cofinality</a>: Notes on talks I gave regarding the seminar thus far :)</p>
+    </details>
+</li>
+</ul>
+<p>If you are interested in joining, do not hesitate to contact me via mail.</p>
         </section>
         
         <section id="writings">
