--- a/index.html
+++ b/index.html
@@ -457,12 +457,14 @@
     <strong>Derived Seminar:</strong> (April 2025 - ongoing) A seminar following the book
     <a href="https://people.mpim-bonn.mpg.de/gaitsgde/Book/" target="_blank" rel="noopener noreferrer">A Study in Derived Algebraic Geometry</a>
     <details>
+        Here you will find notes on talks I gave regarding the seminar thus far :)
         <summary>See more</summary>
-        <p><a href="DAG TALK.pdf" download>28.04.25 - Straightening/Kan extensions/Cofinality</a>: Notes on talks I gave regarding the seminar thus far :)</p>
+        <p><a href="DAG TALK.pdf" download>28.04.25 - Straightening/Kan extensions/Cofinality</a> </p>
+        <p>If you are interested in joining our Discord server and participating in the seminar, do not hesitate to contact me via mail.</p>
     </details>
 </li>
 </ul>
-<p>If you are interested in joining, do not hesitate to contact me via mail.</p>
+
         </section>
         
         <section id="writings">
