--- a/index.html
+++ b/index.html
@@ -456,10 +456,13 @@
                 <li>
     <strong>Derived Seminar:</strong> (April 2025 - ongoing) A seminar following the book
     <a href="https://people.mpim-bonn.mpg.de/gaitsgde/Book/" target="_blank" rel="noopener noreferrer">A Study in Derived Algebraic Geometry</a>
+    <strong>Derived Seminar:</strong> (April 2025 - ongoing) A seminar following the book
+    <a href="https://people.mpim-bonn.mpg.de/gaitsgde/Book/" target="_blank" rel="noopener noreferrer">A Study in Derived Algebraic Geometry</a>
     <details>
+        <summary style="color: darkred; cursor: pointer;">See more</summary>
         Here you will find notes on talks I gave regarding the seminar thus far :)
-        <summary>See more</summary>
-        <p><a href="DAG TALK.pdf" download>28.04.25 - Straightening/Kan extensions/Cofinality</a> </p>
+        <p><a href="DAG TALK.pdf" download>28.04.25 - Straightening/Kan extensions/Cofinality</a></p>
+        <p><a href="monoidalTalkDAG.pdf" download>05.05.25 - Monoidal Structures in Derived Algebraic Geometry</a></p>
         <p>If you are interested in joining our Discord server and participating in the seminar, do not hesitate to contact me via mail.</p>
     </details>
 </li>
