--- a/index.html
+++ b/index.html
@@ -459,8 +459,7 @@
     <details>
         <summary style="color: darkred; cursor: pointer;">See more</summary>
         Here you will find notes on talks I gave regarding the seminar thus far :)
-        <p><a href="DAG TALK.pdf" download>28.04.25 - Straightening/Kan extensions/Cofinality</a></p>
-        <p><a href="https://drive.google.com/drive/u/1/folders/18yiHB4BZoHdXqvVvGQJA3OD0rLVbx3T3" target="_blank" rel="noopener noreferrer">05.05.25 - Monoidal Structures</a></p>
+        <p><a href="https://drive.google.com/drive/folders/1BDolaQUMEHms55K6jtY2KzFkfPwOLBhd?usp=sharing" target="_blank" rel="noopener noreferrer">Link to notes</a></p>
         <p>If you are interested in joining our Discord server and participating in the seminar, do not hesitate to contact me via mail.</p>
     </details>
 </li>
