--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
             </section>
 
             <h2>Seminars</h2>
-            <p>Two friends of mine (Lucy Grossmann and Marcus Nicolas) and I are organizing seminars on subjects we find particularly interesting. The following seminars have taken place or are currently ongoing:</p>
+            <p>Two friends of mine (Lucy Grossman and Marcus Nicolas) and I are organizing seminars on subjects we find particularly interesting. The following seminars have taken place or are currently ongoing:</p>
             <ul>
                 <li>
                     <strong>Synthetic Seminar:</strong> (October 2024 - March 2025) A reading seminar focused on the upcoming book
