--- a/index.html
+++ b/index.html
@@ -460,6 +460,7 @@
         <summary style="color: darkred; cursor: pointer;">See more</summary>
         Here you will find notes on talks I gave regarding the seminar thus far :)
         <p><a href="https://drive.google.com/drive/folders/1BDolaQUMEHms55K6jtY2KzFkfPwOLBhd?usp=sharing" target="_blank" rel="noopener noreferrer">Link to notes</a></p>
+        <p><a href="https://drive.google.com/file/d/1z1PQD_pOqb_7V5DYDxXum6kQakXRumav/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Link to seminar outline</a></p>
         <p>If you are interested in joining our Discord server and participating in the seminar, do not hesitate to contact me via mail.</p>
     </details>
 </li>
