--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                         </ul>
                     </div>
                     <div class="profile-picture-container">
-                        <img src="alex.png" alt="Alexander Zahrer" class="profile-picture">
+                        <img src="alexFußball.png" alt="Alexander Zahrer" class="profile-picture">
                     </div>
                 </div>
 
