--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                         </ul>
                     </div>
                     <div class="profile-picture-container">
-                        <img src="alexFußball.png" alt="Alexander Zahrer" class="profile-picture">
+                        <img src="IMG_20220521_133210_1_1.jpg" alt="Alexander Zahrer" class="profile-picture">
                     </div>
                 </div>
 
